Tested changes and modified accordingly